# similarity

./: .gitignore  CHANGELOG.md  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  publish.yml
bench/: cases.ts
bench/cases/: classes-and-scenarios.ts  functions-negative.ts  functions-positive.ts  types.ts
docs/: accuracy-benchmark.md
native/similarity-core-fork/: Cargo.toml
native/similarity-core-fork/src/: apted.rs  class_comparator.rs  class_extractor.rs  function_extractor.rs  generic_overlap_detector.rs  language_parser.rs  lib.rs  overlap_detector.rs  parser.rs  subtree_fingerprint.rs  tree.rs  tsed.rs  type_comparator.rs  type_extractor.rs  type_normalizer.rs
native/similarity-core-ts/: Cargo.toml
native/similarity-core-ts/src/: lib.rs
native/similarity-wasm/: Cargo.toml
native/similarity-wasm/src/: lib.rs
scripts/: accuracy-benchmark.ts  baseline-metrics.ts  build-wasm.mjs
src/: analyze.ts  cli.ts  defaults.ts  format.ts  index.ts  types.ts
src/analyzers/: classes.ts  functions.ts  overlap.ts  types.ts
src/engine/: wasm.ts
src/utils/: files.ts  path.ts  similarity.ts  typescript.ts
tests/: accuracy-benchmark.test.ts  accuracy-regression.test.ts  analyze.test.ts  cli.test.ts  defaults.test.ts  files.test.ts  format.test.ts  index.test.ts  path.test.ts  wasm.test.ts
