[package]
name = "similarity-core"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Core library for code similarity detection using AST-based comparison (fork without non-TS tree-sitter grammars)"
authors = ["mizchi"]

[dependencies]
oxc_parser = "0.124.0"
oxc_ast = "0.124.0"
oxc_span = "0.124.0"
oxc_allocator = "0.124.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
oxc_semantic = "0.124.0"
