[package]
name = "similarity-core-ts"
version = "0.1.0"
edition = "2021"

[lib]
name = "similarity_core_ts"
path = "src/lib.rs"

[features]
default = []
parallel = ["dep:rayon"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "1", optional = true }
