[package]
name = "similarity-wasm"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde_json = "1"
wasm-bindgen = "0.2"
similarity-core-ts = { path = "../similarity-core-ts" }

[package.metadata.wasm-pack.profile.release]
# Skip wasm-opt to keep the publish pipeline self-contained and avoid
# depending on downloading binaryen at build time.
wasm-opt = false
